# taky

./: .gitignore  README.md  alembic.ini  data.json  pyproject.toml
.github/: renovate.json5
.github/workflows/: codeql.yml  python-tests.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_6a1c92078f3d4fde___init___py.html  z_6a1c92078f3d4fde_anc_py.html  z_6a1c92078f3d4fde_datapackage_py.html  z_6a1c92078f3d4fde_stream_framer_py.html  z_711555bcbc44d153___init___py.html  z_711555bcbc44d153_base_py.html  z_711555bcbc44d153_cot_history_py.html  z_711555bcbc44d153_issued_certs_py.html  z_711555bcbc44d153_packages_py.html  z_711555bcbc44d153_users_py.html  z_8015e3325214648c___init___py.html  z_8015e3325214648c___main___py.html  z_8015e3325214648c_client_py.html  z_8015e3325214648c_mgmt_py.html  z_8015e3325214648c_persistence_py.html  z_8015e3325214648c_router_py.html  z_8015e3325214648c_server_py.html  z_82c78cfa219c1d8d___init___py.html  z_82c78cfa219c1d8d_detail_py.html  z_82c78cfa219c1d8d_errors_py.html  z_82c78cfa219c1d8d_event_py.html  z_82c78cfa219c1d8d_geochat_py.html  z_82c78cfa219c1d8d_point_py.html  z_82c78cfa219c1d8d_takuser_py.html  z_82c78cfa219c1d8d_teams_py.html  z_ae50dec4d6188b53___init___py.html  z_ae50dec4d6188b53___main___py.html  z_f39bcba4a07fffcf___init___py.html  z_f39bcba4a07fffcf_datapackage_py.html  z_f39bcba4a07fffcf_index_py.html  z_f39bcba4a07fffcf_kml_py.html  z_f39bcba4a07fffcf_version_py.html  z_f39bcba4a07fffcf_video_py.html  z_f5d600436d213be5___init___py.html  z_f5d600436d213be5_config_py.html  z_f5d600436d213be5_db_py.html
taky/: __init__.py  config.py  db.py
taky/cli/: __init__.py  __main__.py  build_client_cmd.py  kickban_cmd.py  setup_taky_cmd.py  status_cmd.py  systemd_cmd.py
taky/cot/: __init__.py  __main__.py  client.py  mgmt.py  persistence.py  router.py  server.py
taky/cot/models/: __init__.py  detail.py  event.py  geochat.py  point.py  takuser.py
taky/dps/: __init__.py  __main__.py
taky/dps/views/: __init__.py  datapackage.py  video.py
taky/models/: __init__.py  cot_history.py  issued_certs.py  packages.py  users.py
taky/util/: __init__.py  anc.py  datapackage.py  stream_framer.py
tests/: conftest.py  test_cot_event.py  test_geo_chat.py  test_max_ttl.py  test_memory_regression.py  test_models.py  test_router.py  test_stream_framer.py  test_takclient.py  test_takuser.py
