[build-system]
requires = ["setuptools==82.0.1", "setuptools-scm==10.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "taky"
dynamic = ["version"]
description = "A simple TAK server and COT router"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Tim K", email = "tpkuester@gmail.com"}]
classifiers = [
    "Topic :: Communications",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "lxml==6.0.2",
    "defusedxml==0.7.1",
    "cryptography==46.0.6",
    "python-dateutil==2.9.0.post0",
    "Flask==3.1.3",
    "gunicorn==25.3.0",
    "redis==7.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "pytest-xdist==3.8.0",
    "pytest-asyncio==1.3.0",
    "mock==5.2.0",
    "coverage==7.13.5",
    "black==26.3.1",
    "pylint==4.0.5",
    "pre-commit==4.5.1",
]

[project.scripts]
taky = "taky.cot.__main__:main"
taky_dps = "taky.dps.__main__:main"
takyctl = "taky.cli.__main__:main"

[project.urls]
Source = "https://github.com/layertwo/taky"

[tool.setuptools.packages.find]
where = ["."]
include = ["taky*"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--verbose",
    "--cov=taky",
    "--cov-report=term-missing",
    "--cov-report=term",
    "--cov-report=html",
    "--cov-report=xml",
    "-n=auto"
]

[tool.coverage.run]
source = ["taky"]
omit = [
    "*/tests/*",
    "*/test_*",
]
branch = true
parallel = true
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "pass",
]

[tool.black]
line-length = 88
target-version = ["py311"]
src = ["taky/", "tests/"]
