[build-system]
requires = ["setuptools==82.0.1", "setuptools-scm==10.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "taky"
dynamic = ["version"]
description = "A simple TAK server and COT router"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Tim K", email = "tpkuester@gmail.com"}]
classifiers = [
    "Topic :: Communications",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "defusedxml==0.7.1",
    "cryptography==46.0.7",
    "python-dateutil==2.9.0.post0",
    "Flask==3.1.3",
    "gunicorn==25.3.0",
    "redis==7.4.0",
    "sqlalchemy==2.0.49",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "greenlet==3.4.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite==0.22.1",
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "pytest-xdist==3.8.0",
    "pytest-asyncio==1.3.0",
    "mock==5.2.0",
    "coverage==7.13.5",
    "black==26.3.1",
    "isort==8.0.1",
    "flake8==7.3.0",
    "Flake8-pyproject==1.2.4",
    "pylint==4.0.5",
    "pre-commit==4.5.1",
]

[project.scripts]
taky = "taky.cot.__main__:main"
taky_dps = "taky.dps.__main__:main"
takyctl = "taky.cli.__main__:main"

[project.urls]
Source = "https://github.com/layertwo/taky"

[tool.setuptools.packages.find]
where = ["."]
include = ["taky*"]
exclude = ["alembic*"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = [
    "--verbose",
    "--cov=taky",
    "--cov-report=term-missing",
    "--cov-report=term",
    "--cov-report=html",
    "--cov-report=xml",
    "-n=auto"
]

[tool.coverage.run]
source = ["taky"]
omit = [
    "*/taky/cli/*",
    "*/tests/*",
    "*/test_*",
]
branch = true
parallel = true
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "pass",
    "except DistributionNotFound:"
]

[tool.black]
line-length = 88
target-version = ["py311"]
src = ["taky/", "tests/"]

[tool.isort]
profile = "black"
src_paths = ["taky/", "tests/"]
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # whitespace before ':'
    "E266",  # too many leading '#' for block comment
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator
    "W504",  # line break after binary operator
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    ".eggs",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".coverage",
    "htmlcov",
]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C90", # mccabe complexity
]
